--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -34,7 +34,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd deploy
-            docker-compose up
+            docker compose up
 
 
 
