--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -18,14 +18,22 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+      - name: render config
+        run: |
+          mkdir deploy
+          export IMAGE_TAG=${{ secrets.IMAGE_TAG }}
+          export GITHUB_REF_NAME=$GITHUB_REF_NAME
+          export GITHUB_RUN_ID=$GITHUB_RUN_ID
+          cat docker-compose.yaml | envsubst > deploy/docker-compose.yaml
       - name: copy compose file
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          source: "docker-compose.yaml"
+          source: "deploy/docker-compose.yaml"
           target: "deploy"
+          strip_components: 1
       - name: run
         uses: appleboy/ssh-action@master
         with:
