--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: "3.3"
 
 services:
   web:
-    build: .
+    build: $IMAGE_TAG:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - 5000:5000
